<resources>
    <string name="app_name">DogApp</string>
    <string name="dog">dog</string>
    <string name="dogApp">DogApp</string>

    <string name="editar_cita">Editar Cita</string>
    <string name="nombre_mascota">Nombre de la Mascota</string>
    <string name="raza">Raza</string>
    <string name="nombre_propietario">Nombre del Propietario</string>
    <string name="telefono">Teléfono</string>
    <string name="editar_cita_button">Editar Cita</string>
    <string name="error_campos_vacios">Por favor complete todos los campos</string>
    <string name="error_seleccion_sintoma">Selecciona un síntoma</string>
    <string name="nombre_de_la_mascota">Nombre de la Mascota</string>

    <string-array name="sintomas">
        <item>Síntomas</item>
        <item>Solo duerme</item>
        <item>No come</item>
        <item>Fractura extremidad</item>
        <item>Tiene pulgas</item>
        <item>Tiene garrapatas</item>
        <item>Bota demasiado pelo</item>
    </string-array>

    <string name="turno_format">Turno: #%s</string> <!-- Cambiado de %d a %s -->
    <string name="propietario_label">Propietario:</string>
    <string name="telefono_label">Teléfono:</string>
    <string name="pet_image">Imagen de la mascota</string>
    <string name="delete">Eliminar cita</string>
    <string name="edit">Editar cita</string>

    <string name="delete_confirmation_title">Confirmar eliminación</string>
    <string name="delete_confirmation_message">¿Estás seguro que deseas eliminar esta cita?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="appointment_deleted_success">Cita eliminada con éxito</string>

</resources>